--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,9 +20,11 @@ add_subdirectory(src/Tempest)
 add_executable(Game src/Game.cpp)
 set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT Game)
 
-add_custom_command(TARGET Game POST_BUILD
-    COMMAND ${CMAKE_COMMAND} -E copy_if_different
-        "${PROJECT_BINARY_DIR}/src/Tempest/Debug/Tempest.dll"
-        $<TARGET_FILE_DIR:Game>)
+if(WIN32)
+	add_custom_command(TARGET Game POST_BUILD
+		COMMAND ${CMAKE_COMMAND} -E copy_if_different
+			"${PROJECT_BINARY_DIR}/src/Tempest/Debug/Tempest.dll"
+			$<TARGET_FILE_DIR:Game>)
+endif()
 
 target_link_libraries(Game PRIVATE OpenGL::GL OpenGL::GLU GLEW::GLEW Tempest)
