Updated the code to have the client create the dll entry point. This is a reset point if I can't get the dll to do it itself.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 3.14.0)
 
 project(Tempest 
-		VERSION 0.0.0
-		LANGUAGES CXX
-		DESCRIPTION "Tempest Engine")
+        VERSION 0.0.0
+        LANGUAGES CXX
+        DESCRIPTION "Tempest Engine")
 
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -21,10 +21,14 @@ add_executable(Game src/Game.cpp)
 set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT Game)
 
 if(WIN32)
-	add_custom_command(TARGET Game POST_BUILD
-		COMMAND ${CMAKE_COMMAND} -E copy_if_different
-			"${PROJECT_BINARY_DIR}/src/Tempest/Debug/Tempest.dll"
-			$<TARGET_FILE_DIR:Game>)
+    add_custom_command(TARGET Game POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy_if_different
+            "${PROJECT_BINARY_DIR}/src/Tempest/Debug/Tempest.dll"
+            $<TARGET_FILE_DIR:Game>)
 endif()
+
+message(STATUS ${CMAKE_CURRENT_SOURCE_DIR}/src/Tempest/Public)
+
+target_include_directories(Game PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src/Tempest/Public)
 
 target_link_libraries(Game PRIVATE OpenGL::GL OpenGL::GLU GLEW::GLEW Tempest)
