--- a/src/Tempest/CMakeLists.txt
+++ b/src/Tempest/CMakeLists.txt
@@ -1,8 +1,7 @@
-
-set(${ENGINE_NAME} "Tempest")
-
 include(GenerateExportHeader)
-add_library(Tempest SHARED Application.cpp Application.h)
+add_library(Tempest SHARED Application.cpp Application.h
+                           EntryPoint.h
+                           Public/Tempest.h)
 
 generate_export_header(Tempest)
 target_include_directories(Tempest PUBLIC ${PROJECT_BINARY_DIR}/src/Tempest)
