Entry point has been developed so that int main function is in the engine not the client.

--- a/src/Tempest/CMakeLists.txt
+++ b/src/Tempest/CMakeLists.txt
@@ -1,6 +1,7 @@
 include(GenerateExportHeader)
 add_library(Tempest SHARED Application.cpp Application.h
                            EntryPoint.h
+						   Core.h
                            Public/Tempest.h)
 
 generate_export_header(Tempest)
