--- a/src/Tempest/CMakeLists.txt
+++ b/src/Tempest/CMakeLists.txt
@@ -4,9 +4,9 @@ set(SPDLOG_LIBRARIES "${CMAKE_SOURCE_DIR}../../../loggingLibrary/logStaticLib/sp
 
 include(GenerateExportHeader)
 
-file(GLOB_RECURSE TEMPEST_MAIN
-    "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp"
-    "${CMAKE_CURRENT_SOURCE_DIR}/*.h"
+file(GLOB_RECURSE TEMPEST_PUBLIC
+    "${CMAKE_CURRENT_SOURCE_DIR}/Public/*.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/Public/*.h"
 )
 
 file(GLOB_RECURSE TEMPEST_EVENTS
@@ -14,15 +14,15 @@ file(GLOB_RECURSE TEMPEST_EVENTS
     "${CMAKE_CURRENT_SOURCE_DIR}/Events/*.h"
 )
 
-file(GLOB_RECURSE TEMPEST_PUBLIC
-    "${CMAKE_CURRENT_SOURCE_DIR}/Public/*.cpp"
-    "${CMAKE_CURRENT_SOURCE_DIR}/Public/*.h"
+file(GLOB_RECURSE TEMPEST_SOURCE
+    "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/*.h"
 )
 
-add_library(Tempest SHARED ${TEMPEST_MAIN} ${TEMPEST_EVENTS} ${TEMPEST_PUBLIC})
-
-source_group("Event"  FILES ${TEMPEST_EVENTS})
+source_group("Events" FILES ${TEMPEST_EVENTS})
 source_group("Public" FILES ${TEMPEST_PUBLIC})
+
+add_library(Tempest SHARED ${TEMPEST_SOURCE})
 
 generate_export_header(Tempest)
 
