Updated the pre-compiled header. Also added GLFW to Tempest

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,19 +1,12 @@
-cmake_minimum_required(VERSION 3.14.0)
+cmake_minimum_required(VERSION 3.19.0)
 
 project(Tempest 
         VERSION 0.0.0
         LANGUAGES CXX
         DESCRIPTION "Tempest Engine")
 
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
-#Sets ups the module path to work with the a custom on so the defualt CMake modules work.
-list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/modules")
-list(APPEND CMAKE_PREFIX_PATH "${CMAKE_SOURCE_DIR}../../../glew-2.1.0/")
-
-find_package(GLEW REQUIRED)
-find_package(OpenGL REQUIRED)
 
 add_subdirectory(src/Tempest)
 
@@ -27,8 +20,7 @@ if(WIN32)
             $<TARGET_FILE_DIR:Game>)
 endif()
 
-
 target_include_directories(Game PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src/Tempest/Public)
 
-target_link_libraries(Game PRIVATE OpenGL::GL OpenGL::GLU GLEW::GLEW Tempest)
+target_link_libraries(Game PRIVATE Tempest)
 
