Fixed precompiled header bug. Need to restructor the source tree. Also began implementation of the  GLFW window for Windows.

--- a/src/Tempest/CMakeLists.txt
+++ b/src/Tempest/CMakeLists.txt
@@ -1,7 +1,4 @@
 
-set(SPDLOG_INCLUDE_DIR "${CMAKE_SOURCE_DIR}../../../loggingLibrary/spdlog/include")
-set(SPDLOG_LIBRARIES "${CMAKE_SOURCE_DIR}../../../loggingLibrary/logStaticLib/spdlog.lib")
-
 include(GenerateExportHeader)
 
 file(GLOB_RECURSE TEMPEST_SOURCE
@@ -9,7 +6,11 @@ file(GLOB_RECURSE TEMPEST_SOURCE
     "${CMAKE_CURRENT_SOURCE_DIR}/*.h"
 )
 
-source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${TEMPEST_SOURCE})
+if(MSVC)
+    set(SPDLOG_INCLUDE_DIR "${CMAKE_SOURCE_DIR}../../../loggingLibrary/spdlog/include")
+    set(SPDLOG_LIBRARIES "${CMAKE_SOURCE_DIR}../../../loggingLibrary/logStaticLib/spdlog.lib")
+    source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${TEMPEST_SOURCE})
+endif()
 
 #Sets ups the module path to work with the a custom on so the defualt CMake modules work.
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/modules")
@@ -23,9 +24,11 @@ find_package(GLFW REQUIRED)
 
 add_library(Tempest SHARED ${TEMPEST_SOURCE})
 
-target_precompile_headers(Tempest PUBLIC PreComp.h)
+set(PRECOMPILED_HEADER Tempest/PublicInclude)
+
+target_precompile_headers(Tempest PUBLIC "${PRECOMPILED_HEADER}/PreComp.h")
 
 generate_export_header(Tempest)
 
-target_include_directories(Tempest PUBLIC ${PROJECT_BINARY_DIR}/src/Tempest ${SPDLOG_INCLUDE_DIR} ${GLFW_INCLUDE_DIR})
+target_include_directories(Tempest PUBLIC ${PROJECT_BINARY_DIR}/src/Tempest ${SPDLOG_INCLUDE_DIR} ${GLFW_INCLUDE_DIR} ${PRECOMPILED_HEADER})
 target_link_libraries(Tempest PUBLIC OpenGL::GL OpenGL::GLU GLEW::GLEW ${SPDLOG_LIBRARIES} ${GLFW_LIBRARIES}) 
