Added the a few minor fixes.

--- a/src/Tempest/CMakeLists.txt
+++ b/src/Tempest/CMakeLists.txt
@@ -2,14 +2,15 @@
 include(GenerateExportHeader)
 
 file(GLOB_RECURSE TEMPEST_SOURCE
-    "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp"
-    "${CMAKE_CURRENT_SOURCE_DIR}/*.h"
+    "${CMAKE_CURRENT_SOURCE_DIR}/Tempest/*.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/Tempest/*.h"
 )
 
 if(MSVC)
     set(SPDLOG_INCLUDE_DIR "${CMAKE_SOURCE_DIR}../../../loggingLibrary/spdlog/include")
     set(SPDLOG_LIBRARIES "${CMAKE_SOURCE_DIR}../../../loggingLibrary/logStaticLib/spdlog.lib")
-    source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${TEMPEST_SOURCE})
+    set(GLEW_USE_STATIC_LIBS True)
+    source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" FILES ${TEMPEST_SOURCE})
 endif()
 
 #Sets ups the module path to work with the a custom on so the defualt CMake modules work.
@@ -30,5 +31,5 @@ target_precompile_headers(Tempest PUBLIC "${PRECOMPILED_HEADER}/PreComp.h")
 
 generate_export_header(Tempest)
 
-target_include_directories(Tempest PUBLIC ${PROJECT_BINARY_DIR}/src/Tempest ${SPDLOG_INCLUDE_DIR} ${GLFW_INCLUDE_DIR} ${PRECOMPILED_HEADER})
-target_link_libraries(Tempest PUBLIC OpenGL::GL OpenGL::GLU GLEW::GLEW ${SPDLOG_LIBRARIES} ${GLFW_LIBRARIES}) 
+target_include_directories(Tempest PUBLIC ${PROJECT_BINARY_DIR}/src/Tempest ${SPDLOG_INCLUDE_DIR} ${GLFW_INCLUDE_DIR} ${GLEW_INCLUDE_DIRS} ${PRECOMPILED_HEADER})
+target_link_libraries(Tempest PRIVATE OpenGL::GL OpenGL::GLU ${GLEW_STATIC_LIBRARIES} ${SPDLOG_LIBRARIES} ${GLFW_LIBRARIES}) 
