Added my own key codes and mouse code. Also added GLM as my maths library.

--- a/src/Tempest/CMakeLists.txt
+++ b/src/Tempest/CMakeLists.txt
@@ -10,6 +10,7 @@ if(MSVC)
     set(SPDLOG_INCLUDE_DIR "${CMAKE_SOURCE_DIR}../../../loggingLibrary/spdlog/include")
     set(SPDLOG_LIBRARIES "${CMAKE_SOURCE_DIR}../../../loggingLibrary/logStaticLib/spdlog.lib")
     set(IMGUI_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/vender/imgui-master")
+    set(GML_INCLUDE_DIR "${CMAKE_SOURCE_DIR}../../../glm-master")
     set(GLEW_USE_STATIC_LIBS True)
     source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${TEMPEST_SOURCE})
 endif()
@@ -34,7 +35,8 @@ target_precompile_headers(Tempest PUBLIC "${PRECOMPILED_HEADER}/PreComp.h")
 
 generate_export_header(Tempest)
 
-message(STATUS ${IMGUI_INCLUDE_DIR})
+message(STATUS ${GML_INCLUDE_DIR})
+message(STATUS ${SPDLOG_INCLUDE_DIR})
 
-target_include_directories(Tempest PUBLIC ${PROJECT_BINARY_DIR}/src/Tempest ${SPDLOG_INCLUDE_DIR} ${GLFW_INCLUDE_DIR} ${GLEW_INCLUDE_DIRS} ${PRECOMPILED_HEADER} ${IMGUI_INCLUDE_DIR})
+target_include_directories(Tempest PUBLIC ${PROJECT_BINARY_DIR}/src/Tempest ${SPDLOG_INCLUDE_DIR} ${GLFW_INCLUDE_DIR} ${GLEW_INCLUDE_DIRS} ${PRECOMPILED_HEADER} ${IMGUI_INCLUDE_DIR} ${GML_INCLUDE_DIR})
 target_link_libraries(Tempest PRIVATE OpenGL::GL OpenGL::GLU ${GLEW_STATIC_LIBRARIES} ${SPDLOG_LIBRARIES} ${GLFW_LIBRARIES} IMGUI) 
