--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.19.0)
 
 project(Tempest 
         VERSION 0.0.2
-        LANGUAGES CXX
+        LANGUAGES CXX C
         DESCRIPTION "Tempest Engine")
 
 set(CMAKE_CXX_STANDARD 17)
@@ -18,6 +18,11 @@ target_compile_options(Game PRIVATE
 )
 
 set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT Game)
+    set_property(
+        TARGET Game
+        APPEND
+        PROPERTY COMPILE_DEFINITIONS GLEW_NO_GLU GLEW_STATIC
+    )
 
 #if(WIN32)
     #Using a bit of post-processing we can select the varaiables we need to
