--- a/src/Tempest/CMakeLists.txt
+++ b/src/Tempest/CMakeLists.txt
@@ -10,6 +10,7 @@ if(MSVC)
     set(IMGUI_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/vender/imgui")
     set(GML_INCLUDE_DIR "${CMAKE_SOURCE_DIR}../../../glm-master")
     set(GLEW_USE_STATIC_LIBS True)
+    set(GLEW_INCLUDE_DIR "${CMAKE_SOURCE_DIR}/src/Tempest/vender/glew-2.1.0/include")
     source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${TEMPEST_SOURCE})
 endif()
 
@@ -23,14 +24,21 @@ find_package(GLFW REQUIRED)
 find_package(GLEW REQUIRED)
 find_package(OpenGL REQUIRED)
 
+add_subdirectory(vender/glew-2.1.0)
 add_subdirectory(vender/imgui)
 
 add_library(Tempest STATIC ${TEMPEST_SOURCE})
 
 set_property(TARGET Tempest PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
 
+    set_property(
+        TARGET Tempest
+        APPEND
+        PROPERTY COMPILE_DEFINITIONS GLEW_NO_GLU GLEW_STATIC
+    )
+
 set(PRECOMPILED_HEADER Tempest/PublicInclude)
 target_precompile_headers(Tempest PUBLIC "${PRECOMPILED_HEADER}/PreComp.h")
 
-target_include_directories(Tempest PUBLIC ${PROJECT_BINARY_DIR}/src/Tempest ${SPDLOG_INCLUDE_DIR} ${PRECOMPILED_HEADER} ${IMGUI_INCLUDE_DIR} ${GML_INCLUDE_DIR} ${GLFW_INCLUDE_DIR} ${GLEW_INCLUDE_DIRS})
-target_link_libraries(Tempest PRIVATE  ${SPDLOG_LIBRARIES} IMGUI) 
+target_include_directories(Tempest PUBLIC ${PROJECT_BINARY_DIR}/src/Tempest ${SPDLOG_INCLUDE_DIR} ${PRECOMPILED_HEADER} ${IMGUI_INCLUDE_DIR} ${GML_INCLUDE_DIR} ${GLFW_INCLUDE_DIR} ${GLEW_INCLUDE_DIR})
+target_link_libraries(Tempest PRIVATE  ${SPDLOG_LIBRARIES} IMGUI GLEW) 
