--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,9 @@
 [submodule "src/Tempest/vender/glfw"]
 	path = src/Tempest/vender/glfw
 	url = https://github.com/glfw/glfw.git
+[submodule "src/Tempest/vender/spdlog"]
+	path = src/Tempest/vender/spdlog
+	url = https://github.com/gabime/spdlog.git
+[submodule "src/Tempest/vender/glm"]
+	path = src/Tempest/vender/glm
+	url = https://github.com/g-truc/glm.git
