--- a/EngineSrc/Tempest/CMakeLists.txt
+++ b/EngineSrc/Tempest/CMakeLists.txt
@@ -10,6 +10,7 @@ if(MSVC)
     set(GLFW_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/vender/glfw/include")
     set(SPDLOG_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/vender/spdlog/include")
     set(GML_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/vender/glm")
+    set(STB_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/vender/stb")
     source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${TEMPEST_SOURCE})
 endif()
 
@@ -17,6 +18,7 @@ add_subdirectory(vender/glew-2.1.0)
 add_subdirectory(vender/imgui)
 add_subdirectory(vender/glfw)
 add_subdirectory(vender/spdlog)
+add_subdirectory(vender/stb)
 
 add_library(Tempest STATIC ${TEMPEST_SOURCE})
 
@@ -31,5 +33,5 @@ set_property(
 set(PRECOMPILED_HEADER Tempest/PublicInclude)
 target_precompile_headers(Tempest PUBLIC "${PRECOMPILED_HEADER}/PreComp.h")
 
-target_include_directories(Tempest PUBLIC ${PROJECT_BINARY_DIR}/src/Tempest ${SPDLOG_INCLUDE_DIR} ${PRECOMPILED_HEADER} ${IMGUI_INCLUDE_DIR} ${GML_INCLUDE_DIR} ${GLFW_INCLUDE_DIR} ${GLEW_INCLUDE_DIR})
-target_link_libraries(Tempest PRIVATE IMGUI GLEW GLFW SPDLOG) 
+target_include_directories(Tempest PUBLIC ${PROJECT_BINARY_DIR}/src/Tempest ${SPDLOG_INCLUDE_DIR} ${PRECOMPILED_HEADER} ${IMGUI_INCLUDE_DIR} ${GML_INCLUDE_DIR} ${GLFW_INCLUDE_DIR} ${GLEW_INCLUDE_DIR} ${STB_INCLUDE_DIR})
+target_link_libraries(Tempest PRIVATE IMGUI GLEW GLFW SPDLOG STB)
