Refactored the code. Also added a new game file and fixed a bug.

--- a/EngineSrc/Tempest/CMakeLists.txt
+++ b/EngineSrc/Tempest/CMakeLists.txt
@@ -30,8 +30,10 @@ set_property(
     PROPERTY COMPILE_DEFINITIONS GLEW_NO_GLU GLEW_STATIC
 )
 
+add_compile_definitions("TEMPEST_$<$<CONFIG:Debug>:DEBUG>")
+
 set(PRECOMPILED_HEADER Tempest/PublicInclude)
 target_precompile_headers(Tempest PUBLIC "${PRECOMPILED_HEADER}/PreComp.h")
 
-target_include_directories(Tempest PUBLIC ${PROJECT_BINARY_DIR}/src/Tempest ${SPDLOG_INCLUDE_DIR} ${PRECOMPILED_HEADER} ${IMGUI_INCLUDE_DIR} ${GML_INCLUDE_DIR} ${GLFW_INCLUDE_DIR} ${GLEW_INCLUDE_DIR} ${STB_INCLUDE_DIR})
+target_include_directories(Tempest PUBLIC ${PROJECT_BINARY_DIR}/src/Tempest ${SPDLOG_INCLUDE_DIR} ${PRECOMPILED_HEADER} ${IMGUI_INCLUDE_DIR} ${GML_INCLUDE_DIR} ${GLFW_INCLUDE_DIR} ${GLEW_INCLUDE_DIR} ${STB_INCLUDE_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 target_link_libraries(Tempest PRIVATE IMGUI GLEW GLFW SPDLOG STB)
