--- a/EngineSrc/Tempest/vender/stb/CMakeLists.txt
+++ b/EngineSrc/Tempest/vender/stb/CMakeLists.txt
@@ -1,3 +1,5 @@
 add_library(STB STATIC stb_image.h stb_image.cpp)
 
-set_property(TARGET STB PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
+if(MSVC)
+    set_property(TARGET STB PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
+endif()
