--- a/EngineSrc/Tempest/CMakeLists.txt
+++ b/EngineSrc/Tempest/CMakeLists.txt
@@ -11,6 +11,10 @@ if(MSVC)
     set(SPDLOG_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/vender/spdlog/include")
     set(GML_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/vender/glm")
     set(STB_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/vender/stb")
+    set(OPENAL_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/vender/openal-soft/include")
+    #I need to uses a config file that is generated here. So it's not a 
+    #mistake it's a binrary directory.
+    set(SNDFILE_INCLUDE_DIR "${CMAKE_BINARY_DIR}/EngineSrc/Tempest/vender/libsndfile/include")
     source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${TEMPEST_SOURCE})
 endif()
 
@@ -19,6 +23,8 @@ add_subdirectory(vender/imgui)
 add_subdirectory(vender/glfw)
 add_subdirectory(vender/spdlog)
 add_subdirectory(vender/stb)
+add_subdirectory(vender/openal-soft)
+add_subdirectory(vender/libsndfile)
 
 add_library(Tempest STATIC ${TEMPEST_SOURCE}) 
 
@@ -29,7 +35,7 @@ endif()
 set_property(
     TARGET Tempest
     APPEND
-    PROPERTY COMPILE_DEFINITIONS GLEW_NO_GLU GLEW_STATIC
+    PROPERTY COMPILE_DEFINITIONS GLEW_NO_GLU GLEW_STATIC AL_LIBTYPE_STATIC
 )
 
 add_compile_definitions("$<$<CONFIG:Debug>:TEMPEST_DEBUG>")
@@ -37,5 +43,5 @@ add_compile_definitions("$<$<CONFIG:Debug>:TEMPEST_DEBUG>")
 set(PRECOMPILED_HEADER Tempest/PublicInclude)
 target_precompile_headers(Tempest PUBLIC "${PRECOMPILED_HEADER}/PreComp.h")
 
-target_include_directories(Tempest PUBLIC ${PROJECT_BINARY_DIR}/src/Tempest ${SPDLOG_INCLUDE_DIR} ${PRECOMPILED_HEADER} ${IMGUI_INCLUDE_DIR} ${GML_INCLUDE_DIR} ${GLFW_INCLUDE_DIR} ${GLEW_INCLUDE_DIR} ${STB_INCLUDE_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
-target_link_libraries(Tempest PRIVATE IMGUI GLEW GLFW SPDLOG STB)
+target_include_directories(Tempest PUBLIC ${PROJECT_BINARY_DIR}/src/Tempest ${SPDLOG_INCLUDE_DIR} ${PRECOMPILED_HEADER} ${IMGUI_INCLUDE_DIR} ${GML_INCLUDE_DIR} ${GLFW_INCLUDE_DIR} ${GLEW_INCLUDE_DIR} ${STB_INCLUDE_DIR} ${CMAKE_CURRENT_SOURCE_DIR} ${OPENAL_INCLUDE_DIR} ${SNDFILE_INCLUDE_DIR})
+target_link_libraries(Tempest PRIVATE IMGUI GLEW GLFW SPDLOG STB OPENAL SNDFILE)
