--- a/EngineSrc/Tempest/vender/stb/CMakeLists.txt
+++ b/EngineSrc/Tempest/vender/stb/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(STB STATIC stb_image.h stb_image.cpp)
+add_library(STB STATIC stb_image.h stb_image.cpp stb_truetype.h)
 
 if(MSVC)
     set_property(TARGET STB PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
