ST - Current state of the game after 2 days of a game jam.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,9 +21,9 @@ add_subdirectory(EngineSrc/Tempest)
 
 add_executable(Game ${GAME_SOURCE})
 
-if(MSVC)
-    set_property(TARGET Game PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
-endif()
+#if(MSVC)
+#    set_property(TARGET Game PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
+#endif()
 
 target_compile_options(Game PRIVATE
   $<$<CXX_COMPILER_ID:MSVC>:/W4>
