--- a/EngineSrc/Tempest/vender/stb/CMakeLists.txt
+++ b/EngineSrc/Tempest/vender/stb/CMakeLists.txt
@@ -1,5 +1,5 @@
-add_library(STB STATIC stb_image.h stb_image.cpp stb_truetype.h)
+add_library(STB STATIC stb_image.h stb_image.cpp stb_truetype.h stb_truetype.cpp)
 
-if(MSVC)
-    set_property(TARGET STB PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
-endif()
+#if(MSVC)
+#    set_property(TARGET STB PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
+#endif()
